Changelog
=========


1.7.2 (unreleased)
------------------

- Fix caching for unpublished navigation roots by not using p.a.caching. [jone]

- Introduce appearance helper
  [Kevin Bieri]


1.7.1 (2016-09-26)
------------------

- Support replacing portal-type- and mimetype-icons. [jone]

- Fix support for mimetype icons having long names. [jone, mbaechtold]


1.7.0 (2016-09-22)
------------------

- Fix multi-fill support of embed-resource mixin,
  introducing a new syntax and signature. [Kevin Bieri]


1.6.1 (2016-08-08)
------------------

- Reduce tab hover state
  The current hover state will be always the selected state
  [Kevin Bieri]


1.6.0 (2016-07-18)
------------------

- Move zindex system from plonetheme.blueberry
  [Kevin Bieri]


1.5.2 (2016-07-06)
------------------

- Use font family definitions from plonetheme.blueberry
  [Kevin Bieri]


1.5.1 (2016-06-23)
------------------

- Support selected state of tab-list on link (a tag) too.
  [mathias.leimgruber]

- ie-only slector now supports ms edge and IE11.
  [raphael-s]


1.5.0 (2016-05-26)
------------------

- Introduce spinner mixin.
  [Kevin Bieri]


1.4.0 (2016-05-24)
------------------

- Introduce ie-only mixin.
  [Kevin Bieri]


1.3.0 (2016-05-20)
------------------

- Extend list-group mixin interface to configure the hover color.
  [Kevin Bieri]

- Add new variable $color-content-background.
  [mathias.leimgruber]

- Introduce overlay mixin.
  [Kevin Bieri]

- Extend floatgrid with by-index directive.
  [Kevin Bieri]


1.2.0 (2016-03-30)
------------------

- Introduce horizontal definition list mixin.
  [Kevin Bieri]

- Responsive support for textareas.
  [Kevin Bieri]

- Introduce portrait mixin.
  [Kevin Bieri]

- Responsive support for input fields.
  [Kevin Bieri]

- Introduce active list-group item mixin.
  [Kevin Bieri]


1.1.0 (2016-03-03)
------------------

- Introduce progressbar.
  [Kevin Bieri]

- Register imaging scales as dynamic SCSS resource.
  [Kevin Bieri]
